--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -1,3 +1,12 @@
-*{
+:root {
+    --background1: #a41a1a;
+    --background2: #fff;
+    
+    --primary1: #1a73e8;
+    --primary2: #1a73e8;
+    
+    --secondary1: #fff;
+    --secondary2: #fff;
     
 }
+
