--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -1,7 +1,7 @@
 body{
     margin: 65px;
+    margin-top: 0%;
     margin-left: 60%;
-    background-color: rgb(82, 130, 114);
     background-image: url('img/background.jpg');
     background-size: 100%;
     background-position: center -290px;
@@ -40,7 +40,7 @@ h2{
 
 .input-field {
     position: relative;
-    margin-bottom: 40px;
+    margin-bottom: 10px;
     margin-top: 40px;
     width: 200px;
     height: fit-content;
@@ -80,7 +80,7 @@ h2{
 }
 
 #password,#username{
-    background-color: #397082;
+    background-color: #49869b;
     padding: 5px;
     
 }
@@ -170,8 +170,8 @@ p a {
 }
 
 .google-button img {
-    width: 20px; /* Adjust the size of the Google logo */
-    margin-right: 10px; /* Add some space between the logo and text */
+    width: 20px;
+    margin-right: 10px;
 }
 .github-button {
     display: flex;
@@ -190,6 +190,9 @@ p a {
 }
 
 .github-button img {
-    width: 20px; /* Adjust the size of the Google logo */
-    margin-right: 10px; /* Add some space between the logo and text */
+    width: 20px; 
+    margin-right: 10px;
+}
+.forgot{
+    padding-bottom: 30px;
 }
