--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -62,10 +62,19 @@ h2{
     position: relative;
     margin-bottom: 10px;
     margin-top: 40px;
-    width: 200px;
+    width: fit-content;
     height: fit-content;
     cursor: text;
-    color: #00ffcc;    
+    color: #00ffcc;   
+    padding: 0;
+}
+
+
+.input-field input[type="text"], .input-field input[type="password"]{
+    background-color: transparent;
+    color: #ccc;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1em;
 }
 .input-field input {
     display: block;
@@ -76,10 +85,12 @@ h2{
     margin: 0;
     padding: 0;
 }
+
+
 .input-field input:empty ~ label{
     position: absolute;
-    top: -5px;
-    left: 0;
+    top: -12px;
+    left: -7px;
     font-size: 1rem;
     color: #ccc;
     transition: all 0.3s ease-in-out;
@@ -89,20 +100,13 @@ h2{
 .input-field input:valid ~ label{
     position: absolute;
     top: -30px;
-    left: 0;
+    left: -7px;
     font-size: 1rem;
     color: #28e975;
     
     
 }
 
-#password,#username{
-    background-color: transparent;
-    padding: 7px;
-    color: #ccc;
-    font-family: 'Roboto', sans-serif;
-    font-size: 1em;
-}
 .input-field input:empty ~ .underline:before{
     content: "";
     position: absolute;
@@ -139,15 +143,15 @@ h2{
 
 .submit{
     background-color: #6158B2;
-    padding-inline: 120px;
     border-radius: 5px;
     border: none;
-    padding-block: 10px;
+    padding: 10px 10%;
     color: #ccc;
     box-shadow: #221f3f 2px 2px 15px;
     cursor: pointer;
     transition: all 0.3s ease-in-out;
     font-size: 1em;
+    text-align: center;
 }
 .submit:hover, .submit:focus{
     background-color: #6c62c6;
