--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,10 +1,33 @@
 body {
     margin: 0;
     font-family: 'Arial', sans-serif;
-    background-color: #303138;
+    background-color: #303138; 
+  }
+  html {
+    scroll-behavior: smooth;
+  }
+  .container {
+    display: inline-block;
+    cursor: pointer;
     
-    
-    
+  }
+  
+  .bar1, .bar2, .bar3 {
+    width: 35px;
+    height: 5px;
+    background-color: #d4d1d1;
+    margin: 6px 0;
+    transition: 0.4s;
+  }
+  
+  .change .bar1 {
+    transform: translate(0, 11px) rotate(-45deg);
+  }
+  
+  .change .bar2 {opacity: 0;}
+  
+  .change .bar3 {
+    transform: translate(0, -11px) rotate(45deg);
   }
   
   header {
@@ -73,32 +96,51 @@ body {
     color: white;
     padding: 14px 16px;
     text-decoration: none;
-    transition: background-color 0.3s, color 0.3s; /* Add color transition */
+    transition: background-color 0.3s, color 0.3s;
     margin-bottom: 25px;
     padding-right: 150px;
+    border-radius: 10px;
+
    
     
   }
   
   a:hover {
-    background-color: #efeeee;
-    color: black; /* Change text color on hover */
-    border-radius: 10px;
+    background-color: #e1e1e1;
+    color: black;
+
   }
   
   .mid_nav{
     padding: 10px;
+    padding-top: 0%;
     padding-left: 300px;
     margin: 10px;
-    background-color: transparent;
     display: inline-block; 
+    position: sticky;
+    top: 0;
+    z-index: 2;
+    padding-bottom: 0;
+    
+    
+   
+ 
+    
+
+    
   }
   .mid_nav ul{
+    padding-top: 5px;
     padding-bottom: 0px;
+    margin: 0;
+    padding-right: 700px;
+    background-image: linear-gradient(to bottom, #303138,#303138,#303138, transparent);
+    
   }
   .mid_nav li{
     display: inline-block;
     font-size: 17px;
+
   }
   .all{
     padding: 7px;
@@ -123,23 +165,42 @@ body {
     gap: 20px;
     margin: 20px;
     margin-left: 310px;
+    padding-left: 10px;
+    padding-bottom: 50px;
     flex-direction: row;
     flex-wrap: wrap;
     overflow: hidden;
     text-align: center;
     margin-top: 0;
-   
-    
+    padding-top: 20px;
 
+   
+  
 
   }
+
+  .grid-item:hover{
+    transform: scale(1.05);
+    cursor: pointer;
+    /*
+    box-shadow: rgba(255, 255, 255, 0.12) 0 0 50px;
+    */
+  
+    border: rgb(156, 156, 156) 2px solid;
+  box-shadow: 0 4px 8px 0 rgb(134, 133, 133), 0 0px 50px 0px rgba(0, 0, 0, 0.19);
+ 
+
+  }
+
  
   .grid-item{
     background-color: #2a2b30;
     padding: 20px;
+    transition: transform 0.2s ease-in-out;
+
     border-radius: 5px;
     padding-bottom: 60px;
-    padding-right: 265px;
+    padding-right: 250px;
     display: flex;
     flex-direction: column;
     border: #4c4c4d 2px solid;
@@ -147,11 +208,10 @@ body {
     width: 100px;
     color: rgb(180, 175, 175);
     text-align: justify;
-
-    
-    
+ 
 
   }
+  
   .grid-item img {
     width: 100px; 
     height: auto; 
@@ -215,4 +275,7 @@ body {
   }
   .Finished:hover::after {
     width: 100%;
+  }
+  progress ::-moz-progress-bar{
+    background: red;
   }
