--- a/assets/css/components/pathway-card.css
+++ b/assets/css/components/pathway-card.css
@@ -1,3 +1,6 @@
+/*
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+*/
 
 /*.pathway-card:hover{
     transform: scale(1.05);
@@ -8,9 +11,11 @@
 
 }*/
 
-
 .pathway-card{
     font-family: 'Roboto', sans-serif;
+    font-weight: normal;
+    font-size: 1em;
+    font-style: normal;
     overflow: hidden;
     background-color: #2a2b30;
     border-radius: 5px;
@@ -61,12 +66,13 @@
 .pathway-card .description{
     padding-left: 10px;
     overflow-y: hidden; /* NOT Enable vertical scrolling when content overflows */
-    max-height: 200px;
     width: 100%;
+    height: 80px;
 }
 .pathway-card .title{
-    font-weight: bold;
+    font-weight: 900;
     width: 300px;
+    margin: 5px;
     color: white;
     font-size: 1.5em;
 }
@@ -75,6 +81,7 @@
     font-size: 0.8em;
     color: rgb(146, 143, 143);
     margin-top: 5px;
+    margin-bottom: 5px;
     margin-left: 3px;
     display: flex;
     flex-direction: row;
@@ -98,7 +105,8 @@
     justify-content: flex-start;
     align-items: center;
     width: 100%;
-    margin-top: 10px;
+    margin-top: 16px;
+    margin-bottom: 16px;
 }
 
 .pathway-card .progress-control .progress{
@@ -140,6 +148,8 @@
     color: white;
     cursor: pointer;
     transition: background-color 0.3s;
+    min-width: 100px;
+    font-weight: bold;
 }
 
 .pathway-card .progress-control button:hover{
