Make header border box to reduce crazy bug haunting me

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1,156 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap');
+
+
+
 body {
-    margin: 0;
-    font-family: 'Arial', sans-serif;
     background-color: #303138;
+    font-family: 'Roboto', sans-serif;
 }
-  html {
+
+html {
     scroll-behavior: smooth;
-  }
-/*  .container {
-    display: inline-block;
-    cursor: pointer;
-    
-  }
-  hr{
-    margin: 7px;
-    color: #f5f5fb;
+}
 
-  }
-  
-  .bar1, .bar2, .bar3 {
-    width: 35px;
-    height: 5px;
-    background-color: #d4d1d1;
-    margin: 6px 0;
-    transition: 0.4s;
-  }
-  
-  .change .bar1 {
-    transform: translate(0, 11px) rotate(-45deg);
-  }
-  
-  .change .bar2 {opacity: 0;}
-  
-  .change .bar3 {
-    transform: translate(0, -11px) rotate(45deg);
-  }*/
-  
-  /*header {
-    
-    color: #efeeee;
-    padding-left: 300px;
-    text-align: center;
-    display: flex;
-    justify-content: space-between;
-    padding-right: 70px;
-    
-    
-    
-  }
-  
-  .header-right {
-    
-    
-  padding: 30px 7px;
- 
 
-  }
-  .headleft {
-    margin-right: 1200px;
-    background-color: #635147;
-  }
-
-  
-  .leftnav {
-    float: left;
-    position: fixed;
-    
-    
-  }
-  
-  ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    padding-bottom: 20px;
-   
-    
-  }
-  
-  li {
-    display: block;
-    padding-right: 10px;
-
-  }
-  
-  li a {
-    display: block;
-    color: white;
-    padding: 14px 16px;
-    text-decoration: none;
-    transition: background-color 0.3s, color 0.3s;
-    margin-bottom: 25px;
-    padding-right: 150px;
-    border-radius: 10px;
-
-   
-    
-  }
-  
-  li a:hover {
-    background-color: #e1e1e1;
-    color: black;
-
-  }
-  
-  .mid_nav{
-    padding: 10px;
-    padding-top: 0%;
-    padding-left: 300px;
-    margin: 10px;
-    display: inline-block; 
-    position: sticky;
-    top: 0;
-    z-index: 2;
-    padding-bottom: 0;
-    
-    
-   
- 
-    
-
-    
-  }
-  .mid_nav ul{
-    padding-top: 5px;
-    padding-bottom: 0px;
-    margin: 0;
-    padding-right: 700px;
-    background-image: linear-gradient(to bottom, #303138,#303138,#303138, transparent);
-    
-  }
-  .mid_nav li{
-    display: inline-block;
-    font-size: 17px;
-
-  }
-  .all{
-    padding: 7px;
-    padding-left: 40px;
-    padding-right: 40px;
-  }
-  .in_progress{
-    padding: 7px;
-    padding-left: 20px;
-    padding-right: 20px;
-    margin-left: 50px;
-  }
-  .Finished{
-    padding: 7px;
-    padding-left: 30px;
-    padding-right: 30px;
-    margin-left: 50px;
-  }*/
   .grid-container {
     display: flex;
     flex-direction: row;
@@ -162,175 +23,5 @@ body {
     margin-right: 20px;
 
     padding: 20px;
-    flex-direction: row;
-    flex-wrap: wrap;
-    /*
-    overflow: hidden;
-    */
-    /*
-    margin-top: 0;
-    */
-    padding-top: 20px;
-
-   
-  
 
   }
-   .my_stuff{
-    color: #efeeee;
-    padding-left: 10px;
-  }
-  progress{
-    width: 225px;
-    
-  }
-  /*.all::after {
-    content: '';
-    display: block;
-    height: 3px;
-    width: 0;
-    background-color: rgb(76, 165, 175); 
-    transition: width 0.3s;
-  }
-  .all:hover::after {
-    width: 100%;
-  }
-  .in_progress::after {
-    content: '';
-    display: block;
-    height: 3px;
-    width: 0;
-    background-color: rgb(76, 165, 175);
-    transition: width 0.3s;
-  }
-  .in_progress:hover::after {
-    width: 100%;
-  }
-  .Finished::after {
-    content: '';
-    display: block;
-    height: 3px;
-    width: 0;
-    background-color: rgb(76, 165, 175); 
-    transition: width 0.3s;
-  }
-  .Finished:hover::after {
-    width: 100%;
-  }
-  progress ::-moz-progress-bar{
-    background: red;
-  }
-   !* Dropdown Button *!
-.dropbtn {
-background-color: transparent;
-  color: #ddd;
-  font-size: 30px;
-  border: transparent ;
-  cursor: pointer;
-  border-radius: 50%;
-}
-
-!* The container <div> - needed to position the dropdown content *!
-.dropdown {
-  position: end;
-  display: inline-block;
-  padding-right: 1000px;
-  
-}
-
-!* Dropdown Content (Hidden by Default) *!
-.dropdown-content {
-  display: none;
-  position: absolute;
- 
-  min-width: 160px;
- 
-  z-index: 1;
-  margin-top: 10px;
-  
-  margin-left: 165px;
-  
-}
-
-!* Links inside the dropdown *!
-.dropdown-content a {
-  color: black;
-  padding: 5px;
-  text-decoration: none;
-  display: block;
-  text-align: center;
-  
-  
-  
-  
-}
-
-!* Change color of dropdown links on hover *!
-.dropdown-content a:hover {background-color: #ddd;
-border-color: #45494d;
-box-shadow: 0px 8px 16px 0px rgba(225, 224, 224, 0.2);
-}
-
-!* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) *!
-.show {display:block;} 
-
-.completed{
-  background-color: #3d8e4d;
-  border: #2d2d2d solid 2px;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.remove{
-  background-color: red;
-  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-}
-.my_acc_drop_btn {
-  background-color: transparent;
-  color: rgb(241, 230, 230);
-  padding: 16px;
-  font-size: 16px;
-  border: none;
-  cursor: pointer;
-  
-}
-
-
-.header-right {
-  position: relative;
-  display: inline-block;
-  left: 0;
-}
-
-.drop_down-content {
-  display: none;
-  position: absolute;
-  background-color: #f6f1f1;
-  min-width: 160px;
-  box-shadow: 0px 8px 16px 0px rgba(210, 209, 209, 0.2);
-  z-index: 3;
-  border-radius: 10px;
-  padding-inline: 10px;
-}
-
-.drop_down-content a {
-  color: rgb(4, 4, 4);
-  padding: 12px 16px;
-  text-decoration: none;
-  display: block;
-  margin-bottom: 5px;
-  margin-top: 5px;
-  right: 0;
-  padding-inline: 10px;
-  
-  
-}
-
-.drop_down-content a:hover {background-color: #cac7c7}
-
-.header-right:hover .drop_down-content {
-  display: block;
-}
-.logout:hover{
-  color: red;
-}
-
-*/
