--- a/assets/css/pathway.css
+++ b/assets/css/pathway.css
@@ -96,6 +96,27 @@ html {
     background-color: rgba(161, 5, 5, 0.78);
 }
 
+#top .main-area .progress-control .fork-btn{
+    background-color: rgba(83, 83, 83, 0.37);
+    color: #dbd2d2;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 0.65em;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: 20px;
+}
+
+#top .main-area .progress-control .fork-btn:hover{
+    background-color: rgba(178, 78, 210, 0.78);
+}
+
+#top .main-area .progress-control .fork-btn:active{
+    background-color: rgba(178, 78, 210, 1);
+}
+
 hr {
     border: 1px solid #535353;
     margin-top: 20px;
@@ -230,3 +251,8 @@ input[type="checkbox"]:hover::before {
     background-color:rgba(178, 78, 210, 1);
 }
 
+.bottom .buttons .btn:disabled{
+    background-color: rgba(53, 53, 53, 0.29);
+    color: #dbd2d2;
+    cursor: not-allowed;
+}
