--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -25,3 +25,18 @@ html {
     padding: 20px;
 
 }
+
+
+footer {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    background-color: #2a2b30;
+    color: #a46ee7;
+    padding: 20px;
+    font-weight: 300;
+    font-family: 'Roboto', sans-serif;
+    margin-top: 20px;
+    font-size: large;
+}
