--- a/assets/css/pathway.css
+++ b/assets/css/pathway.css
@@ -34,6 +34,9 @@ html {
 #top .image img {
     width: 100%;
     height: 100%;
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    object-fit: cover;
 }
 
 #top .main-area {
@@ -255,4 +258,153 @@ input[type="checkbox"]:hover::before {
     background-color: rgba(53, 53, 53, 0.29);
     color: #dbd2d2;
     cursor: not-allowed;
+}
+
+
+.title-edit{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.title-edit input[type="text"]{
+    font-size: 1.5em;
+    font-weight: 700;
+}
+
+.title-edit .buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+ 
+
+.title-edit button[type="submit"]{
+    background-color: rgba(83, 83, 83, 0.37);
+    color: #dbd2d2;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 0.65em;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: 5px;
+    width: 100%;
+}
+
+.title-edit .buttons .cancel-btn{
+    background-color: rgba(161, 5, 5, 0.33);
+    color: #ce0000;
+    margin-right: 5px;
+    margin-left: 0;
+}
+
+.title-edit button[type="submit"]:hover{
+    background-color:rgba(178, 78, 210, 0.78);
+}
+
+.title-edit .buttons .cancel-btn:hover{
+    background-color: rgba(161, 5, 5, 0.55);
+}
+
+
+.description-edit{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 100%;
+}
+
+.description-edit input[type="text"]{
+    font-size: 1.5em;
+    font-weight: 700;
+    /*
+    width: 100%;
+    */
+    margin-bottom: 10px;
+    padding: 10px;
+    border-radius: 10px;
+    border: none;
+    background-color: rgba(55,55,55, 0.25);
+    color: #B4AFAF;
+    flex-grow: 1;
+}
+
+.section-title-edit{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 20px;
+    width: 100%;
+}
+.section-title-edit h2{
+    margin: 0;
+}
+
+.description-edit textarea{
+    font-size: 1.2em;
+    font-weight: 400;
+    resize: none;
+    width: 100%;
+    height: 350px;
+    padding: 10px;
+    border-radius: 5px;
+    border: none;
+    background-color: rgba(53, 53, 53, 0.25);
+    color: #B4AFAF;
+    transition: background-color 0.3s;
+}
+
+.description-edit textarea:focus{
+    outline: none;
+    background-color: rgba(53, 53, 53, 0.76);
+}
+
+
+.description-edit .buttons{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 8px;
+    margin-bottom: 5px;
+    width: 100%;
+}
+
+.description-edit button[type="submit"]{
+    background-color: rgba(83, 83, 83, 0.37);
+    color: #dbd2d2;
+    border: none;
+    border-radius: 5px;
+    padding: 10px 20px;
+    font-size: 1em;
+    font-weight: 700;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    margin-left: 5px;
+    width: 100%;
+}
+
+.description-edit .buttons .cancel-btn{
+    background-color: rgba(161, 5, 5, 0.33);
+    color: #ce0000;
+    margin-right: 5px;
+    margin-left: 0;
+}
+
+.random-cat-pic{
+    border-radius: 15px;
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.75);
+    object-fit: cover;
+    margin: 50px;
 }
